--- a/create-account.html
+++ b/create-account.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>FlymyMall</title>
-    <link rel="icon" type="image/x-icon" href="/images//FlymyMalllFullcolorfavicon.png">
+     <link rel="icon" type="image/x-icon" href="images//FlymyMalllFullcolorfavicon.png">
     <link
         href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
         rel="stylesheet">
@@ -23,58 +23,59 @@
 </head>
 
 <body>
- <!-- header section start -->
- <Header>
-    <div class="container flex-btw">
-        <a href="home.html" class="logo">
-            <img src="images/fmm-logo.svg" alt="">
-        </a>
-        <nav>
-            <ul class="flex-btw">
-                <li class="dropdown">
-                    <a href="#">SOLUTIONS <span><img src="images/arrow-down.svg" alt="arrow-down"></span></a>
-                    <ul class="options">
-                        <li><a href="#">dropdown</a></li>
-                        <li><a href="#">dropdown</a></li>
-                        <li><a href="#">dropdown</a></li>
-                    </ul>
-                </li>
-                <li><a href="features.html">FEATURES</a></li>
-                <li><a href="pricing.html">PRICING</a></li>
-                <li><a href="contact.html">CONTACT</a></li>
-                <li><a href="shopstore.html">SHOP</a></li>
-                <li><a href="login.html">LOGIN</a></li>
-            </ul>
-        </nav>
+   <!-- header section start -->
+    <Header>
+      <div class="container flex-btw">
+          <a href="home.html" class="logo">
+              <img src="images/fmm-logo.svg" alt="">
+          </a>
+          <nav>
+              <ul class="flex-btw">
+                <div class="mobile-btn"></div>
+                  <li class="dropdown">
+                      <a href="#">SOLUTIONS <span><img src="images/arrow-down.svg" alt="arrow-down"></span></a>
+                      <ul class="options">
+                          <li><a href="#">dropdown</a></li>
+                          <li><a href="#">dropdown</a></li>
+                          <li><a href="#">dropdown</a></li>
+                      </ul>
+                  </li>
+                  <li><a href="features.html">FEATURES</a></li>
+                  <li><a href="pricing.html">PRICING</a></li>
+                  <li><a href="contact.html">CONTACT</a></li>
+                  <li><a href="shopstore.html">SHOP</a></li>
+                  <li id="login"><a href="login.html">LOGIN</a></li>
+              </ul>
+          </nav>
 
-        <div class="right-side flex-btw">
-            <a href="signup.html" class="signup-btn">Sign up</a>
-            <div class="flags-dropdown">
-                <div class="flag">
-                    <img src="images/flag.png" alt="flag">
-                    <span><img src="images/arrow-down.svg" alt=""></span>
-                </div>
-                <ul class="flags-options">
-                    <li><img src="images/flag.png" alt="flag"></li>
-                    <li><img src="images/flag.png" alt="flag"></li>
-                    <li><img src="images/flag.png" alt="flag"></li>
-                    <li><img src="images/flag.png" alt="flag"></li>
-                    <li><img src="images/flag.png" alt="flag"></li>
-                    <li><img src="images/flag.png" alt="flag"></li>
-                    <li><img src="images/flag.png" alt="flag"></li>
-                </ul>
-            </div>
-            <a href="signin.html" class="add-to-cart"><img src="images/shopping-cart.svg" alt=""></a>
-        </div>
+          <div class="right-side flex-btw">
+              <div  id="signup"><a href="signup.html" class="signup-btn">Sign up</a></div>
+              <div class="flags-dropdown">
+                  <div class="flag">
+                      <img src="images/flag.png" alt="flag">
+                      <span><img src="images/arrow-down.svg" alt=""></span>
+                  </div>
+                  <ul class="flags-options">
+                      <li><img src="images/flag.png" alt="flag"></li>
+                      <li><img src="images/flag.png" alt="flag"></li>
+                      <li><img src="images/flag.png" alt="flag"></li>
+                      <li><img src="images/flag.png" alt="flag"></li>
+                      <li><img src="images/flag.png" alt="flag"></li>
+                      <li><img src="images/flag.png" alt="flag"></li>
+                      <li><img src="images/flag.png" alt="flag"></li>
+                  </ul>
+              </div>
+              <a href="signin.html" class="add-to-cart"><img src="images/shopping-cart.svg" alt=""></a>
+          </div>
 
-        <div class="menu-btn">
-            <div class="bar1"></div>
-            <div class="bar2"></div>
-            <div class="bar3"></div>
-        </div>
-    </div>
-  </Header>
-  <!-- header section end -->
+          <div class="menu-btn">
+              <div class="bar1"></div>
+              <div class="bar2"></div>
+              <div class="bar3"></div>
+          </div>
+      </div>
+    </Header>
+    <!-- header section end -->
 
     <!-- signup section start -->
     <section class="signup signup2 create-acc">
