--- a/all-features.html
+++ b/all-features.html
@@ -1,79 +1,80 @@
 <!DOCTYPE html>
 <html lang="en">
 
-  <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>FlymyMall</title>
-    <link rel="icon" type="image/x-icon" href="/images//FlymyMalllFullcolorfavicon.png">
-    <link
-      href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
-      rel="stylesheet">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link
-      href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
-      rel="stylesheet">
-    <link
-      href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400;1,500;1,600;1,700;1,800&display=swap"
-      rel="stylesheet">
-    <link rel="stylesheet" href="css/slick.css">
-    <link rel="stylesheet" href="css/style.css">
-  </head>
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>FlymyMall</title>
+  <link rel="icon" type="image/x-icon" href="images//FlymyMalllFullcolorfavicon.png">
+  <link
+    href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+    rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link
+    href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+    rel="stylesheet">
+  <link
+    href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400;1,500;1,600;1,700;1,800&display=swap"
+    rel="stylesheet">
+  <link rel="stylesheet" href="css/slick.css">
+  <link rel="stylesheet" href="css/style.css">
+</head>
 
 <body>
- <!-- header section start -->
- <Header>
-  <div class="container flex-btw">
+  <!-- header section start -->
+  <Header>
+    <div class="container flex-btw">
       <a href="home.html" class="logo">
-          <img src="images/fmm-logo.svg" alt="">
+        <img src="images/fmm-logo.svg" alt="">
       </a>
       <nav>
-          <ul class="flex-btw">
-              <li class="dropdown">
-                  <a href="#">SOLUTIONS <span><img src="images/arrow-down.svg" alt="arrow-down"></span></a>
-                  <ul class="options">
-                      <li><a href="#">dropdown</a></li>
-                      <li><a href="#">dropdown</a></li>
-                      <li><a href="#">dropdown</a></li>
-                  </ul>
-              </li>
-              <li><a href="features.html">FEATURES</a></li>
-              <li><a href="pricing.html">PRICING</a></li>
-              <li><a href="contact.html">CONTACT</a></li>
-              <li><a href="shopstore.html">SHOP</a></li>
-              <li><a href="login.html">LOGIN</a></li>
-          </ul>
+        <ul class="flex-btw">
+          <div class="mobile-btn"></div>
+          <li class="dropdown">
+            <a href="#">SOLUTIONS <span><img src="images/arrow-down.svg" alt="arrow-down"></span></a>
+            <ul class="options">
+              <li><a href="#">dropdown</a></li>
+              <li><a href="#">dropdown</a></li>
+              <li><a href="#">dropdown</a></li>
+            </ul>
+          </li>
+          <li><a href="features.html">FEATURES</a></li>
+          <li><a href="pricing.html">PRICING</a></li>
+          <li><a href="contact.html">CONTACT</a></li>
+          <li><a href="shopstore.html">SHOP</a></li>
+          <li id="login"><a href="login.html">LOGIN</a></li>
+        </ul>
       </nav>
 
       <div class="right-side flex-btw">
-          <a href="signup.html" class="signup-btn">Sign up</a>
-          <div class="flags-dropdown">
-              <div class="flag">
-                  <img src="images/flag.png" alt="flag">
-                  <span><img src="images/arrow-down.svg" alt=""></span>
-              </div>
-              <ul class="flags-options">
-                  <li><img src="images/flag.png" alt="flag"></li>
-                  <li><img src="images/flag.png" alt="flag"></li>
-                  <li><img src="images/flag.png" alt="flag"></li>
-                  <li><img src="images/flag.png" alt="flag"></li>
-                  <li><img src="images/flag.png" alt="flag"></li>
-                  <li><img src="images/flag.png" alt="flag"></li>
-                  <li><img src="images/flag.png" alt="flag"></li>
-              </ul>
+        <div id="signup"><a href="signup.html" class="signup-btn">Sign up</a></div>
+        <div class="flags-dropdown">
+          <div class="flag">
+            <img src="images/flag.png" alt="flag">
+            <span><img src="images/arrow-down.svg" alt=""></span>
           </div>
-          <a href="signin.html" class="add-to-cart"><img src="images/shopping-cart.svg" alt=""></a>
+          <ul class="flags-options">
+            <li><img src="images/flag.png" alt="flag"></li>
+            <li><img src="images/flag.png" alt="flag"></li>
+            <li><img src="images/flag.png" alt="flag"></li>
+            <li><img src="images/flag.png" alt="flag"></li>
+            <li><img src="images/flag.png" alt="flag"></li>
+            <li><img src="images/flag.png" alt="flag"></li>
+            <li><img src="images/flag.png" alt="flag"></li>
+          </ul>
+        </div>
+        <a href="signin.html" class="add-to-cart"><img src="images/shopping-cart.svg" alt=""></a>
       </div>
 
       <div class="menu-btn">
-          <div class="bar1"></div>
-          <div class="bar2"></div>
-          <div class="bar3"></div>
+        <div class="bar1"></div>
+        <div class="bar2"></div>
+        <div class="bar3"></div>
       </div>
-  </div>
-</Header>
-<!-- header section end -->
+    </div>
+  </Header>
+  <!-- header section end -->
 
   <!-- banner section start -->
   <section class="shop-banner">
@@ -87,7 +88,8 @@
   <section class="fees feature-title">
     <div class="container">
       <h2>Our <span> Features</span></h2>
-      <p>This very extraordinary feature, can make learning activities more efficient<br>This very extraordinary feature, can make learning activities more efficient</p>
+      <p>This very extraordinary feature, can make learning activities more efficient<br>This very extraordinary
+        feature, can make learning activities more efficient</p>
     </div>
   </section>
   <!-- fees section end -->
@@ -119,7 +121,8 @@
     <div class="container">
       <div class="yc-left">
         <h3>Class Management <span> Tools for Educators</span></h3>
-        <p>Class provides tools to help run and manage the class such as Class Roster, Attendance, and more. With the Gradebook, teachers can review and grade tests and quizzes in real-time.
+        <p>Class provides tools to help run and manage the class such as Class Roster, Attendance, and more. With the
+          Gradebook, teachers can review and grade tests and quizzes in real-time.
         </p>
       </div>
       <div class="yc-right cmte">
@@ -130,7 +133,7 @@
   <section class="wc-feature-wrapper yc-color">
     <div class="container">
       <div class="yc-left">
-        <h3>One-on-One  <span>Discussions</span> </h3>
+        <h3>One-on-One <span>Discussions</span> </h3>
         <p>Teachers and teacher assistants can talk with students privately without leaving the Zoom environment.</p>
       </div>
       <div class="yc-right  g-img">
