--- a/all-features.html
+++ b/all-features.html
@@ -47,30 +47,32 @@
         </ul>
       </nav>
 
-      <div class="right-side flex-btw">
-        <div id="signup"><a href="signup.html" class="signup-btn">Sign up</a></div>
-        <div class="flags-dropdown">
-          <div class="flag">
-            <img src="images/flag.png" alt="flag">
-            <span><img src="images/arrow-down.svg" alt=""></span>
+      <div class="flex-btw">
+        <div class="right-side flex-btw">
+          <div id="signup"><a href="signup.html" class="signup-btn">Sign up</a></div>
+          <div class="flags-dropdown">
+            <div class="flag">
+              <img src="images/flag.png" alt="flag">
+              <span><img src="images/arrow-down.svg" alt=""></span>
+            </div>
+            <ul class="flags-options">
+              <li><img src="images/flag.png" alt="flag"></li>
+              <li><img src="images/flag.png" alt="flag"></li>
+              <li><img src="images/flag.png" alt="flag"></li>
+              <li><img src="images/flag.png" alt="flag"></li>
+              <li><img src="images/flag.png" alt="flag"></li>
+              <li><img src="images/flag.png" alt="flag"></li>
+              <li><img src="images/flag.png" alt="flag"></li>
+            </ul>
           </div>
-          <ul class="flags-options">
-            <li><img src="images/flag.png" alt="flag"></li>
-            <li><img src="images/flag.png" alt="flag"></li>
-            <li><img src="images/flag.png" alt="flag"></li>
-            <li><img src="images/flag.png" alt="flag"></li>
-            <li><img src="images/flag.png" alt="flag"></li>
-            <li><img src="images/flag.png" alt="flag"></li>
-            <li><img src="images/flag.png" alt="flag"></li>
-          </ul>
+          <a href="signin.html" class="add-to-cart"><img src="images/shopping-cart.svg" alt=""></a>
         </div>
-        <a href="signin.html" class="add-to-cart"><img src="images/shopping-cart.svg" alt=""></a>
-      </div>
 
-      <div class="menu-btn">
-        <div class="bar1"></div>
-        <div class="bar2"></div>
-        <div class="bar3"></div>
+        <div class="menu-btn">
+          <div class="bar1"></div>
+          <div class="bar2"></div>
+          <div class="bar3"></div>
+        </div>
       </div>
     </div>
   </Header>
