--- a/shopstore.html
+++ b/shopstore.html
@@ -22,6 +22,7 @@
 </head>
 
 <body>
+
   <!-- header section start -->
   <Header>
     <div class="container flex-btw">
@@ -47,34 +48,37 @@
         </ul>
       </nav>
 
-      <div class="right-side flex-btw">
-        <div id="signup"><a href="signup.html" class="signup-btn">Sign up</a></div>
-        <div class="flags-dropdown">
-          <div class="flag">
-            <img src="images/flag.png" alt="flag">
-            <span><img src="images/arrow-down.svg" alt=""></span>
+      <div class="flex-btw">
+        <div class="right-side flex-btw">
+          <div id="signup"><a href="signup.html" class="signup-btn">Sign up</a></div>
+          <div class="flags-dropdown">
+            <div class="flag">
+              <img src="images/flag.png" alt="flag">
+              <span><img src="images/arrow-down.svg" alt=""></span>
+            </div>
+            <ul class="flags-options">
+              <li><img src="images/flag.png" alt="flag"></li>
+              <li><img src="images/flag.png" alt="flag"></li>
+              <li><img src="images/flag.png" alt="flag"></li>
+              <li><img src="images/flag.png" alt="flag"></li>
+              <li><img src="images/flag.png" alt="flag"></li>
+              <li><img src="images/flag.png" alt="flag"></li>
+              <li><img src="images/flag.png" alt="flag"></li>
+            </ul>
           </div>
-          <ul class="flags-options">
-            <li><img src="images/flag.png" alt="flag"></li>
-            <li><img src="images/flag.png" alt="flag"></li>
-            <li><img src="images/flag.png" alt="flag"></li>
-            <li><img src="images/flag.png" alt="flag"></li>
-            <li><img src="images/flag.png" alt="flag"></li>
-            <li><img src="images/flag.png" alt="flag"></li>
-            <li><img src="images/flag.png" alt="flag"></li>
-          </ul>
+          <a href="signin.html" class="add-to-cart"><img src="images/shopping-cart.svg" alt=""></a>
         </div>
-        <a href="signin.html" class="add-to-cart"><img src="images/shopping-cart.svg" alt=""></a>
-      </div>
 
-      <div class="menu-btn">
-        <div class="bar1"></div>
-        <div class="bar2"></div>
-        <div class="bar3"></div>
+        <div class="menu-btn">
+          <div class="bar1"></div>
+          <div class="bar2"></div>
+          <div class="bar3"></div>
+        </div>
       </div>
     </div>
   </Header>
   <!-- header section end -->
+
   <section class="shop-store flex-center">
     <div class="slidebar-wrapper">
       <h2 class="mb-none">Shop by Store</h2>
