tracking page updated

--- a/tracking.html
+++ b/tracking.html
@@ -90,7 +90,52 @@
 
     <!-- map section start -->
     <section class="map-wrapper">
-        <div class="map-inner">
+        <div class="map-status-wrapper">
+            <div class="ware-house status active">
+                <svg width="25" height="40" viewBox="0 0 34 52" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <path
+                        d="M16.9876 11.7C18.5924 11.7 20.1313 12.3848 21.266 13.6038C22.4008 14.8228 23.0382 16.4761 23.0382 18.2C23.0382 19.0536 22.8817 19.8988 22.5777 20.6874C22.2736 21.4761 21.8279 22.1926 21.266 22.7962C20.7042 23.3998 20.0372 23.8786 19.3031 24.2052C18.569 24.5319 17.7822 24.7 16.9876 24.7C15.3829 24.7 13.8439 24.0152 12.7092 22.7962C11.5745 21.5772 10.9371 19.9239 10.9371 18.2C10.9371 16.4761 11.5745 14.8228 12.7092 13.6038C13.8439 12.3848 15.3829 11.7 16.9876 11.7ZM16.9876 0C21.4808 0 25.79 1.91749 28.9672 5.33066C32.1443 8.74382 33.9293 13.3731 33.9293 18.2C33.9293 31.85 16.9876 52 16.9876 52C16.9876 52 0.0460205 31.85 0.0460205 18.2C0.0460205 13.3731 1.83094 8.74382 5.00811 5.33066C8.18528 1.91749 12.4944 0 16.9876 0ZM16.9876 5.2C13.7782 5.2 10.7002 6.56964 8.43083 9.00761C6.16142 11.4456 4.88648 14.7522 4.88648 18.2C4.88648 20.8 4.88648 26 16.9876 43.446C29.0888 26 29.0888 20.8 29.0888 18.2C29.0888 14.7522 27.8139 11.4456 25.5445 9.00761C23.275 6.56964 20.1971 5.2 16.9876 5.2Z"
+                        fill="#F3BCC3" fill-opacity="0.7" />
+                </svg>
+
+                <span>In Warehouse</span>
+            </div>
+            <div class="departed status">
+                <svg version="1.0" xmlns="http://www.w3.org/2000/svg" width="40" height="40"
+                    viewBox="0 0 513.000000 475.000000" preserveAspectRatio="xMidYMid meet">
+                    <g transform="translate(0.000000,475.000000) scale(0.100000,-0.100000)" fill="#000000"
+                        stroke="none">
+                        <path d="M990 4734 c0 -4 937 -1779 1015 -1921 l24 -43 -615 0 -614 0 -296
+395 -296 395 -99 0 c-93 0 -99 -1 -99 -20 0 -11 43 -279 96 -595 l96 -575 -96
+-575 c-53 -316 -96 -584 -96 -595 0 -19 6 -20 99 -20 l99 0 296 395 296 395
+614 0 615 0 -24 -42 c-78 -143 -1015 -1918 -1015 -1922 0 -4 100 -5 222 -4
+l223 3 854 983 855 982 807 0 c503 0 826 4 860 10 122 23 229 107 283 220 29
+60 31 73 31 170 0 97 -2 110 -31 170 -54 113 -161 197 -283 220 -34 6 -357 10
+-860 10 l-807 0 -855 983 -854 982 -223 3 c-122 1 -222 0 -222 -4z" />
+                    </g>
+                </svg>
+                <span>Item departed</span>
+            </div>
+            <div class="customs status"><svg width="25" height="40" viewBox="0 0 34 52" fill="none"
+                    xmlns="http://www.w3.org/2000/svg">
+                    <path
+                        d="M16.9876 11.7C18.5924 11.7 20.1313 12.3848 21.266 13.6038C22.4008 14.8228 23.0382 16.4761 23.0382 18.2C23.0382 19.0536 22.8817 19.8988 22.5777 20.6874C22.2736 21.4761 21.8279 22.1926 21.266 22.7962C20.7042 23.3998 20.0372 23.8786 19.3031 24.2052C18.569 24.5319 17.7822 24.7 16.9876 24.7C15.3829 24.7 13.8439 24.0152 12.7092 22.7962C11.5745 21.5772 10.9371 19.9239 10.9371 18.2C10.9371 16.4761 11.5745 14.8228 12.7092 13.6038C13.8439 12.3848 15.3829 11.7 16.9876 11.7ZM16.9876 0C21.4808 0 25.79 1.91749 28.9672 5.33066C32.1443 8.74382 33.9293 13.3731 33.9293 18.2C33.9293 31.85 16.9876 52 16.9876 52C16.9876 52 0.0460205 31.85 0.0460205 18.2C0.0460205 13.3731 1.83094 8.74382 5.00811 5.33066C8.18528 1.91749 12.4944 0 16.9876 0ZM16.9876 5.2C13.7782 5.2 10.7002 6.56964 8.43083 9.00761C6.16142 11.4456 4.88648 14.7522 4.88648 18.2C4.88648 20.8 4.88648 26 16.9876 43.446C29.0888 26 29.0888 20.8 29.0888 18.2C29.0888 14.7522 27.8139 11.4456 25.5445 9.00761C23.275 6.56964 20.1971 5.2 16.9876 5.2Z"
+                        fill="#F3BCC3" fill-opacity="0.7" />
+                </svg>
+
+                <span>Arrived, Going Through Customs</span>
+            </div>
+            <div class="pick-up status"><svg width="25" height="40" viewBox="0 0 34 52" fill="none"
+                    xmlns="http://www.w3.org/2000/svg">
+                    <path
+                        d="M16.9876 11.7C18.5924 11.7 20.1313 12.3848 21.266 13.6038C22.4008 14.8228 23.0382 16.4761 23.0382 18.2C23.0382 19.0536 22.8817 19.8988 22.5777 20.6874C22.2736 21.4761 21.8279 22.1926 21.266 22.7962C20.7042 23.3998 20.0372 23.8786 19.3031 24.2052C18.569 24.5319 17.7822 24.7 16.9876 24.7C15.3829 24.7 13.8439 24.0152 12.7092 22.7962C11.5745 21.5772 10.9371 19.9239 10.9371 18.2C10.9371 16.4761 11.5745 14.8228 12.7092 13.6038C13.8439 12.3848 15.3829 11.7 16.9876 11.7ZM16.9876 0C21.4808 0 25.79 1.91749 28.9672 5.33066C32.1443 8.74382 33.9293 13.3731 33.9293 18.2C33.9293 31.85 16.9876 52 16.9876 52C16.9876 52 0.0460205 31.85 0.0460205 18.2C0.0460205 13.3731 1.83094 8.74382 5.00811 5.33066C8.18528 1.91749 12.4944 0 16.9876 0ZM16.9876 5.2C13.7782 5.2 10.7002 6.56964 8.43083 9.00761C6.16142 11.4456 4.88648 14.7522 4.88648 18.2C4.88648 20.8 4.88648 26 16.9876 43.446C29.0888 26 29.0888 20.8 29.0888 18.2C29.0888 14.7522 27.8139 11.4456 25.5445 9.00761C23.275 6.56964 20.1971 5.2 16.9876 5.2Z"
+                        fill="#F3BCC3" fill-opacity="0.7" />
+                </svg>
+
+                <span>Available for Pick up/Delivery</span>
+            </div>
+        </div>
+        <!-- <div class="map-inner">
             <div class="item1">
                 <div class="img">
                     <img class='map-d' src="images/map-pin.png" alt="map-pin">
@@ -111,7 +156,7 @@
                     <span>Available for Pick up/Delivery</span>
                 </div>
             </div>
-        </div>
+        </div> -->
     </section>
     <!-- map section end -->
     <!-- tracking section start -->
@@ -124,12 +169,12 @@
 
                     <div class="form-row r-80">
                         <label for="name">Name</label>
-                        <input type="text" id="name" name="name" placeholder="John Doe">
+                        <input type="button" id="name" name="name" value="John Doe">
                     </div>
                     <div class="form-row">
                         <label for="address">Address</label>
-                        <input type="text" id="address" name="address"
-                            placeholder="197 65 122nd Road, Ikeja, Lagos, Nigeria ">
+                        <input type="button" id="address" name="address"
+                            value="197 65 122nd Road, Ikeja, Lagos, Nigeria ">
                     </div>
 
                 </div>
@@ -138,12 +183,12 @@
 
                     <div class="form-row r-80">
                         <label for="name">Name</label>
-                        <input type="text" id="name" name="name" placeholder="John Doe">
+                        <input type="button" id="name" name="name" value="John Doe">
                     </div>
                     <div class="form-row">
                         <label for="address">Address</label>
-                        <input type="text" id="address" name="address"
-                            placeholder="197 65 122nd Road, Ikeja, Lagos, Nigeria ">
+                        <input type="button" id="address" name="address"
+                            value="197 65 122nd Road, Ikeja, Lagos, Nigeria ">
                     </div>
 
                 </div>
@@ -153,15 +198,15 @@
 
                     <div class="form-row r-80">
                         <label for="weight">Weight</label>
-                        <input type="text" id="weight" name="weight" placeholder="">
+                        <input type="button" id="weight" name="weight" value="5kg">
                     </div>
                     <div class="form-row r-80">
                         <label for="date-revied">Date Revied</label>
-                        <input type="text" id="date-revied" name="date-revied" placeholder="">
+                        <input type="button" id="date-revied" name="date-revied" value="12/04/2020">
                     </div>
                     <div class="form-row r-80">
                         <label for="eta">ETA</label>
-                        <input type="text" id="eta" name="eta" placeholder="">
+                        <input type="button" id="eta" name="eta" value="eta">
                     </div>
 
                 </div>
